# ecnu-power-usage

./: Cargo.toml  README.md  TODO.md  justfile
assets/: query-building-response-sample.json  query-district-response-sample.json  query-floors-response-sample.json  query-rooms-response-sample.json  tauri-prompts.txt
src/: client.rs  config.rs  error.rs  lib.rs  rooms.rs  server.rs
src/server/: log.rs  mod.rs  route.rs
tauri/: README.md  justfile  package.json  vite.config.ts
tauri/src/: App.vue  main.ts  style.css
tauri/src-tauri/: Cargo.toml  README.md  build.rs  tauri.conf.json
tauri/src-tauri/src/: commands.rs  config.rs  display.rs  error.rs  health.rs  lib.rs  log.rs  main.rs  notify.rs  online.rs  tray.rs
tauri/src-tauri/src/native/: notify.swift
tauri/src-tauri/src/routine/: degree.rs  health.rs  mod.rs
tauri/src/components/: ArchiveList.vue  ConfigModal.vue  CreateArchiveDialog.vue  DataVisualizer.vue  HealthModal.vue
tauri/src/utils/: archive.ts  config.ts  echarts.ts  electricity.ts  health.ts  notify.ts  records.ts
