[package]
name = "ecnu-power-usage"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.8"
chromiumoxide = "0.8.0"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.54", features = ["derive"] }
csv = "1.4.0"
dirs-next = "2.0.0"
futures = "0.3.31"
reqwest = { version = "0.13.1", default-features = false, features = [
  "cookies",
  "json",
  "rustls",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
shellexpand = "3.1.1"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["fs", "io-util", "macros", "rt-multi-thread"] }
toml = "0.9.11"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
