[package]
name = "ecnu-power-usage-gui"
version = "0.1.0"
description = "ecnu-power-usage gui"
authors = ["azazo1 <azazo1@qq.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ecnu_power_usage_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ecnu-power-usage = { path = "../.." }
dirs-next = "2.0.0"
shellexpand = "3.1.1"
tokio = { version = "1.49.0", features = ["fs"] }
toml = "0.9.11"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
anyhow = "1.0.100"
tracing-appender = "0.2.4"
chromiumoxide = "0.8.0"
chrono = { version = "0.4.43", features = ["serde"] }
